--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
                     <tr>
                         <td align="center">
-                            <img src="https://i.imgur.com/kZgwp6O.png" width="600" alt="Decoração e Organização para sua Casa" style="display: block; width: 600px;">
+                            <img src="https://i.imgur.com/fn6fsGI.png" width="600" alt="Decoração e Organização para sua Casa" style="display: block; width: 600px;">
                         </td>
                     </tr>
 
                     <tr>
                         <td align="center">
                             <a href="https://tudinhoparasuacasa.com.br/produtos/escultura-de-vidro-bird-bege-1h3ov/?variant=1412641714" target="_blank" title="Ver Escultura Bird">
-                                <img src="https://i.imgur.com/722ucv8.png" width="600" alt="Escultura de Vidro Bird Bege - Elegância para sua estante" style="display: block; width: 600px;">
+                                <img src="https://i.imgur.com/fH1AmyP.png" width="600" alt="Escultura de Vidro Bird Bege - Elegância para sua estante" style="display: block; width: 600px;">
                             </a>
                         </td>
                     </tr>
@@ -38,7 +38,7 @@
                     <tr>
                         <td align="center">
                             <a href="https://tudinhoparasuacasa.com.br/produtos/caixa-organizadora-em-bambu-7drcp/?variant=1412570895" target="_blank" title="Ver Caixa Organizadora">
-                                <img src="https://i.imgur.com/c4kBLhh.png" width="600" alt="Caixa Organizadora em Bambu - Organização Natural" style="display: block; width: 600px;">
+                                <img src="https://i.imgur.com/eH4KNgZ.png" width="600" alt="Caixa Organizadora em Bambu - Organização Natural" style="display: block; width: 600px;">
                             </a>
                         </td>
                     </tr>
@@ -46,7 +46,7 @@
                     <tr>
                         <td align="center">
                             <a href="https://tudinhoparasuacasa.com.br/produtos/dispenser-compacto-de-detergente-com-pressao-140ml-1xtt6/" target="_blank" title="Ver Dispenser">
-                                <img src="https://i.imgur.com/hYGFEdN.png" width="600" alt="Dispenser Compacto de Detergente - Praticidade na Cozinha" style="display: block; width: 600px;">
+                                <img src="https://i.imgur.com/FjEUGFa.png" width="600" alt="Dispenser Compacto de Detergente - Praticidade na Cozinha" style="display: block; width: 600px;">
                             </a>
                         </td>
                     </tr>
@@ -54,7 +54,7 @@
                     <tr>
                         <td align="center">
                             <a href="https://tudinhoparasuacasa.com.br/produtos/prato-de-vidro-giratorio-360/" target="_blank" title="Ver Prato Giratório">
-                                <img src="https://i.imgur.com/79W9YwF.png" width="600" alt="Prato de Vidro Giratório 360 graus - Facilite servir sua mesa" style="display: block; width: 600px;">
+                                <img src="https://i.imgur.com/7QiyYZ4.png" width="600" alt="Prato de Vidro Giratório 360 graus - Facilite servir sua mesa" style="display: block; width: 600px;">
                             </a>
                         </td>
                     </tr>
@@ -62,7 +62,7 @@
                     <tr>
                         <td align="center">
                             <a href="https://tudinhoparasuacasa.com.br/produtos/manteigueira-de-bambu-com-tampa-1du19/?variant=1412493300" target="_blank" title="Ver Manteigueira">
-                                <img src="https://i.imgur.com/pw9fkIX.png" width="600" alt="Manteigueira de Bambu com Tampa - Café da manhã sofisticado" style="display: block; width: 600px;">
+                                <img src="https://i.imgur.com/UgJqabK.png" width="600" alt="Manteigueira de Bambu com Tampa - Café da manhã sofisticado" style="display: block; width: 600px;">
                             </a>
                         </td>
                     </tr>
@@ -70,7 +70,7 @@
                     <tr>
                         <td align="center">
                             <a href="https://tudinhoparasuacasa.com.br/saldao/" target="_blank" title="Aproveite o Saldão">
-                                <img src="https://i.imgur.com/gRbw82J.png" width="600" alt="Confira nosso Saldão - Ofertas Imperdíveis" style="display: block; width: 600px;">
+                                <img src="https://i.imgur.com/l7TExFo.png" width="600" alt="Confira nosso Saldão - Ofertas Imperdíveis" style="display: block; width: 600px;">
                             </a>
                         </td>
                     </tr>
